# wasm_avif

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  avif.d.ts  avif.mjs  avif.mjs.br  avif.wasm  avif.wasm.br  avif_for_importScripts.js  avif_worker.d.ts  avif_worker.mjs  avif_worker_script.js  avif_worker_script.mjs  test.html
noop-wasm-bindgen/: Cargo.toml
noop-wasm-bindgen/src/: lib.rs
src/: av1encoder.rs  error.rs  lib.rs  main.rs
